Implemented Like Logic

--- a/MyBlog/MyBlog.csproj
+++ b/MyBlog/MyBlog.csproj
@@ -17,4 +17,9 @@
     <ProjectReference Include="..\MyBlog.Services\MyBlog.Service.csproj" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="wwwroot\lib\axios\" />
+  </ItemGroup>
+
 </Project>
